--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <div class="profile-card">
    <div class="head">
      <div class="profile-image"> 
-       <img src="assets/profile.jpg" alt="Gelniczky Alexandra">
+       <img src="assets/profile.JPG" alt="Gelniczky Alexandra">
        <div class="name-headline">
         <h1>Gelniczky Alexandra</h1>
         <h2>wedding planner</h2>
